@@ -358,3 +358,27 @@ x-advisor = {Chaumette, F.},
    Month = {May},
    Year = {2008}
 } 
+
+@book{Gentle:2004,
+  author = {Gentle, James E.},
+  edition = {2nd},
+  publisher = {Springer},
+  title = {Random Number Generation and Monte Carlo Methods},
+  year = 2004
+}
+
+@article{Park:1988,
+ author = {Park, S. K. and Miller, K. W.},
+ title = {Random Number Generators: Good Ones Are Hard to Find},
+ journal = {Commun. ACM},
+ issue_date = {Oct. 1988},
+ volume = {31},
+ number = {10},
+ month = oct,
+ year = {1988},
+ pages = {1192--1201},
+ numpages = {10},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
